# neural

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  neural  report  t  t.cpp
build-nn-Desktop_Qt_5_7_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.nn.Debug  object_script.nn.Release
data/: n0  n1  n3  nabalone  ndiabetes  nhouse  nnursery  nphoneme  ns0  ns1  ns2  s1  s2  s3  sample  set0  set1
demo/: nzoo
nn/: ANNModel.cpp  ANNModel.hpp  CMakeLists.txt  Tester.cpp  Tester.hpp  Timer.hpp  Trainer.cpp  Trainer.hpp  anfis_1.cpp  main.cpp  nn.pro  trainer.cpp  trainer.hpp
nn/core/include/: Layer.hpp  layer.hpp  network.hpp  nn.hpp
nn/core/src/: AnfisLayer.cpp  AnfisLayer.hpp  Layer.cpp  layer.cpp  network.cpp  nn.cpp
nn/layer/include/: anfis.hpp  feedforward.hpp
nn/layer/src/: anfis.cpp  feedforward.cpp
nn/load/include/: Loader.hpp  Sample.hpp  SampleFeeder.hpp  io.hpp  sample.hpp  sampleFeeder.hpp  sampleSet.hpp  stringProcess.hpp
nn/load/src/: Loader.cpp  Sample.cpp  SampleFeeder.cpp  StringProcess.cpp  load.cpp  sample.cpp  sampleFeeder.cpp  stringProcess.cpp  stringprocess.cpp
nn/method/include/: Normailze.hpp  algorithm.hpp  method.hpp
nn/method/src/: Normailze.cpp  algorithm.cpp  method.cpp
nn/model/: ANNModel.hpp  anfis_1.cpp
nn/output/: Timer.hpp
nn/output/include/: Info.hpp  plot.hpp
nn/output/src/: info.cpp  plot.cpp
nn/train/: Tester.hpp  Trainer.hpp  tester.cpp  trainer.cpp
src/: algorithm.cpp  algorithm.hpp  main.cpp  neural.cpp  neural.hpp  neuralLayer.cpp  nnGetSample.cpp  nnInfo.cpp  (+14 more)
(+23 files in other folders)
